2010-03-09  Christopher Faylor  <me+cygwin@cgf.cx>

	* shared_info.h (open_shared): Create function wrapper for common use
	case.
	(open_shared): Change fifth argument to a pointer rather than a
	reference.
	* fhandler_console.cc (fhandler_console::get_tty_stuff): Eliminate use
	of dummy variable and call open_shared with constant.
	* fhandler_process.cc (format_process_mounts): Ditto.
	* pinfo.cc (pinfo::init): Pass pointer to shloc.
	* shared.cc (shared_mem_inited): New variable.
	(open_shared): Crate function wrapper for common use case.
	(open_shared): Accommodate change to fifth argument to a pointer.
	(shared_info::initialize): Remove spinlock test.  Simplify function.
	Move get_session_parent_dir call back here.
	(memory_init): Protect global shared settings with shared_mem_inited
	spinlock.  Move get_session_parent_dir call to shared_info::initialize.

2010-03-09  Christopher Faylor  <me.cygwin@cgf.cx>

	* shared.cc (inst_root_inited): Delete.
	* (shared_info::initialize): Reorganize.  Move call to
	init_installation_root here under spinlock control.  Move unneeded
	non-shared_info initialization out of this function.
	(memory_init): Remove call to init_installation_root.  Call heap_init
	and get_session_parent_dir here.

2010-03-04  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (nt_path_has_executable_suffix): Change storage class of
	blessed_executable_suffixes to static.
	(rename): Revert meaning of old_explicit_suffix.  Change the rules
	for appending a .exe suffix and (yikes!) document them.

2010-03-04  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* cygwin.din: Export __xdr functions.
	* include/cygwin/version.h: Bump version.
	* posix.sgml: Add a few more XDR functions to list
	of implemented Solaris functions.

2010-03-03  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	Add XDR support.
	* cygwin.din: Export xdr functions.
	* include/cygwin/version.h: Bump version.
	* cygxdr.cc: New.
	* cygxdr.h: New.