@@ -1,3 +1,7 @@
+2010-03-10  Christopher Faylor  <me.cygwin@cgf.cx>
+
+	* shared.cc (memory_init): Fix comment.  Fix indentation.
+
 2010-03-09  Christopher Faylor  <me+cygwin@cgf.cx>
 
 	* shared_info.h (open_shared): Create function wrapper for common use
